wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}
* {box-sizing:border-box}

/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

/* login */
@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;	
	font-family: Raleway, sans-serif;
}



.container {
	display: flex;
	align-items: center;
	justify-content: center;
}

.screen {		
	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
	position: relative;	
	height: 500px;
	width: 360px;	
	box-shadow: 0px 0px 24px #5C5696;
}

.screen__content {
	z-index: 1;
	position: relative;	
	height: 100%;
}

.screen__background {		
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 0;
	-webkit-clip-path: inset(0 0 0 0);
	clip-path: inset(0 0 0 0);	
}

.screen__background__shape {
	transform: rotate(45deg);
	position: absolute;
}

.screen__background__shape1 {
	height: 520px;
	width: 520px;
	background: #FFF;	
	top: -50px;
	right: 120px;	
	border-radius: 0 72px 0 0;
}

.screen__background__shape2 {
	height: 220px;
	width: 220px;
	background: #6C63AC;	
	top: -172px;
	right: 0;	
	border-radius: 32px;
}

.screen__background__shape3 {
	height: 540px;
	width: 190px;
	background: linear-gradient(270deg, #5D54A4, #6A679E);
	top: -24px;
	right: 0;	
	border-radius: 32px;
}

.screen__background__shape4 {
	height: 400px;
	width: 200px;
	background: #7E7BB9;	
	top: 420px;
	right: 50px;	
	border-radius: 60px;
}

.login {
	width: 320px;
	padding: 30px;
	padding-top: 156px;
}

.login__field {
	padding: 20px 0px;	
	position: relative;	
}

.login__icon {
	position: absolute;
	top: 30px;
	color: #7875B5;
}

.login__input {
	border: none;
	border-bottom: 2px solid #D1D1D4;
	background: none;
	padding: 10px;
	padding-left: 24px;
	font-weight: 700;
	width: 75%;
	transition: .2s;
}

.login__input:active,
.login__input:focus,
.login__input:hover {
	outline: none;
	border-bottom-color: #6A679E;
}

.login__submit {
	background: #fff;
	font-size: 14px;
	margin-top: 30px;
	padding: 16px 20px;
	border-radius: 26px;
	border: 1px solid #D4D3E8;
	text-transform: uppercase;
	font-weight: 700;
	display: flex;
	align-items: center;
	width: 100%;
	color: #4C489D;
	box-shadow: 0px 2px 2px #5C5696;
	cursor: pointer;
	transition: .2s;
}

.login__submit:active,
.login__submit:focus,
.login__submit:hover {
	border-color: #6A679E;
	outline: none;
}

.button__icon {
	font-size: 24px;
	margin-left: auto;
	color: #7875B5;
}

.social-login {	
	position: absolute;
	height: 140px;
	width: 160px;
	text-align: center;
	bottom: 0px;
	right: 0px;
	color: #fff;
}

.social-icons {
	display: flex;
	align-items: center;
	justify-content: center;
}

.social-login__icon {
	padding: 20px 10px;
	color: #fff;
	text-decoration: none;	
	text-shadow: 0px 0px 8px #7875B5;
}

.social-login__icon:hover {
	transform: scale(1.5);	
}
/* login End*/

.text-center {
  text-align: left!important; 
}

.grid-background {
background-color: cornflowerblue;
}

.grid-header {
  padding: 10px;
  text-align: left;
  background: white;
  color: black;
  font-size: 30px;
  font-family: --bs-body-font-family;
}

.button-blue {
  background-color: darkblue; /* Green */
  border: none;
  color: white;
  padding: 5px 25px;
  text-align: right;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: -5px 2px;
  cursor: pointer;
  font-weight: 500;
}

.width-80 {
  width: 80%;
}

.width-100 {
  width: 100%;
}

.text-left {
  text-align: left!important; 
}
.text-align-right {
  text-align: right!important; 
}
.text-align-left {
	text-align: left!important; 
  }
.text-align-center {
	text-align: center!important; 
  }
/* (A) THE BASE */
.bar {
	padding: 10px;
	margin: 10px;
	color: #333;
	background: #fafafa;
	border: 1px solid #ccc;
  }
  
  /* (B) THE VARIATIONS */
  .info {
	color: #204a8e;
	background: #c9ddff;
	border: 1px solid #4c699b;
  }
  .success {
	color: #2b7515;
	background: #ecffd6;
	border: 1px solid #617c42;
  }
  .warn {
	color: #756e15;
	background: #fffbd1;
	border: 1px solid #87803e;
  }
  .error {
	color: #ba3939;
	background: #ffe0e0;
	border: 1px solid #a33a3a;
  }

  .font-color-darkblue{
	color : darkblue
  }

  .font-color-green{
	color : green
  }

  .font-color-red{
	color : red
  }

  .width-20px {
	width: 20px;
  }

  .width-20 {
	width: 20%;
  }

  .width-15 {
	width: 15%;
  }

  .width-25 {
	width: 25%;
  }

  .width-10 {
	width: 10%;
  }

  .width-80px {
	width: 80px;
  }

  .width-110px {
	width: 110px;
  }

  .width-120px {
	width: 120px;
  }

  .width-70px {
	width: 70px;
  }

  .width-50px {
	width: 50px;
  }

  .width-220px {
	width: 220px;
  }
  .width-70px {
	width: 70px;
  }
  .width-45 {
	width: 45%;
  }

